some updates to some template parameters that moved to CDK. Preloaded some sidenav items users and namespaces since the navigator was having issues loading dynamically (will investigate). Created some material overrides to tackle the issues with sass module namespacing not allowing overriding a previous function to format css variables. Will need to address the sass changes more thoroughly in the future, possibly refactor.

--- a/frontend/src/scss/_loader-app.scss
+++ b/frontend/src/scss/_loader-app.scss
@@ -22,12 +22,14 @@
 // * includes Material base
 // * includes global app styles
 // *
-@charset "utf-8";
+// @charset "utf-8";
 
 // import loader base
 @import './loader-base.scss';
 
 @import './component-theming.scss';
+
+@import './css-variable-support/material-component-themes';
 
 // generate font-face imports
 @each $font-face, $font-config in $app-available-typefaces {
@@ -73,6 +75,7 @@
 // NEW: CSS VARIANTS
 @each $theme-name, $theme-config in $app-themes {
     @include init-mat-theme($theme-name);
+    @include material-component-themes($theme-name);
 }
 
 @include init-component-themes();
